--- a/nets_final_html/files/main_style.css
+++ b/nets_final_html/files/main_style.css
@@ -8,7 +8,7 @@
  body { width:100%; height:100%; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1; color:#666666 ; background: #f1f1f1; -webkit-font-smoothing:antialiased; }
  .container, .wsite-footer { margin: 0 auto; width: 100%; max-width: 1100px; box-sizing: border-box; padding: 0 2.5em; }
  #banner-wrap, #main-content, #footer-wrap { width:100%; }
- a { color:#d75f04; -webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
+ a { color:#FFFFFF; -webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
  a:hover, #commentUserInfo a:hover { color:#c45603; }
  h2 { line-height: 1.2; color: #333; font-size:1.875em; font-weight: normal; margin: 0 auto .25em; }
  .wsite-content-title { font-size: 2.25em; font-family: 'Crimson Text', serif; font-style: italic; font-weight: 600; text-align: center; }
